# simulation

./: BacterialGrowthModel.cpp  BaseConverter.cpp  CFDSimulation.cpp  CMakeLists.txt  CarbonFusion.cpp  ChainReaction.cpp  ElNinoModel.cpp  Helium3Fusion.cpp  IaSupernova.cpp  OrganicCompound.cpp  Supernova.cpp  Vehicle.cpp  cfd_simulation.py  fusion_data.csv
data/: ammonia_data1.csv
